fix label spacing

--- a/packages/global/scss/components/blocks/_esurveypro.scss
+++ b/packages/global/scss/components/blocks/_esurveypro.scss
@@ -32,6 +32,7 @@
 }
 
 .ESP {
+  $self: &;
   &-box {
     width: 100% !important;
     margin: 0 !important;
@@ -41,6 +42,9 @@
     .radio,
     input[type="radio"] {
       margin-left: initial !important;
+    }
+    label[class^="#{ $self }-answer"] {
+      width: clac(100% - 10px);
     }
   }
   &-question-top {
